# igor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  YACMACompilerLinkerSettings.cmake  igor-config.cmake  igor.hpp  main.cpp
.github/workflows/: gha_ci.yml
include/igor/: igor.hpp
test/: CMakeLists.txt  basic.cpp  catch_main.cpp  validation.cpp
tools/: gha_clang.sh  gha_clang_tidy.sh  gha_gcc.sh  gha_sanitize.sh
