function(ADD_IGOR_TESTCASE arg1)
  add_executable(${arg1} ${arg1}.cpp)
  target_link_libraries(${arg1} igor)
  target_compile_options(${arg1} PRIVATE "$<$<CONFIG:DEBUG>:${IGOR_CXX_FLAGS_DEBUG}>" "$<$<CONFIG:RELEASE>:${IGOR_CXX_FLAGS_RELEASE}>")
  set_property(TARGET ${arg1} PROPERTY CXX_STANDARD 17)
  set_property(TARGET ${arg1} PROPERTY CXX_STANDARD_REQUIRED YES)
  set_property(TARGET ${arg1} PROPERTY CXX_EXTENSIONS NO)
  add_test(${arg1} ${arg1})
endfunction()

ADD_IGOR_TESTCASE(basic)
